# app/Http/Resources/AddressResource.php
@@ -22,6 +22,13 @@ class AddressResource extends JsonResource
              'id_okrug'=>$this->id_okrug,
              'id_prefiks'=>$this->id_prefiks,
              'id_geonim'=>$this->id_geonim,
+             'house'=>$this->house,
+             'corpus'=>$this->corpus,
+             'liter'=>$this->liter,
+             'villa'=>$this->villa,
+             'parcel'=>$this->parcel,
+             'construction'=>$this->construction,
+             'build_number'=>$this->build_number,
              'paddress'=>$this->paddress,
              'base_address_flag'=>$this->base_address_flag,
              'id_user'=>$this->id_user,
